# vending

./: .gitignore  README.md  pyproject.toml
src/vending/: config.py  constants.py  core.py  database.py  detection_data.py  enums.py  main.py  schemas.py  services.py  state.py  websocket.py
src/vending/age_estimation/: __init__.py  agenet.py  detect.py
src/vending/age_estimation/training/: data_loader.py  specifications.py  trainer.py
src/vending/core/: full_system.py  partial.py  utils.py
src/vending/face_detection/: __init__.py  blazeface.py  detect.py  utils.py
src/vending/face_detection/training/: data_loader.py  specifications.py  trainer.py
static/: index.html  index.js  styles.css
